fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--dark-color);
   color: var(--light-color);
+  overflow-x: hidden;
 }
 
 code {
